added Pgp encryption and changes the class hierarchy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-password=You_And_I_1@9__123456789
+#password=You_And_I_1@9__123456789
+password=welcome
 salt=FIXED_SALT__for_testing
-extension=.encr.gpg
+extension=.pgp
+public_key=/ameetchaubal.asc
+recipient=ameetchaubal@gmail.com
