--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.anthem.encoder'
-version '0.1'
+version '0.2'
 
 sourceCompatibility = 1.8
 
@@ -14,6 +14,9 @@ repositories {
 dependencies {
     implementation group: 'org.apache.hadoop', name: 'hadoop-common', version: '2.6.5'
     implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+    implementation group: 'org.bouncycastle', name: 'bcpg-jdk15on', version: '1.64'
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.64'
+    implementation group: 'name.neuhalfen.projects.crypto.bouncycastle.openpgp', name: 'bouncy-gpg', version: '2.2.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
