--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#password=You_And_I_1@9__123456789
-password=welcome
+password=You_And_I_1@9__123456789
+# This is for PgP
+#password=welcome
 salt=FIXED_SALT__for_testing
-extension=.pgp
+#extension=.pgp
+extension=.aes
 public_key=/ameetchaubal.asc
 recipient=ameetchaubal@gmail.com
