added readme cleanup with generic package name more properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-password=You_And_I_1@9__123456789
+encrypt_strategy=PgPProvider
+#password=You_And_I_1@9__123456789
 # This is for PgP
-#password=welcome
+password=welcome
 salt=FIXED_SALT__for_testing
-#extension=.pgp
-extension=.aes
+extension=.pgp
+#extension=.aes
 public_key=/ameetchaubal.asc
+private_key=/ameetchaubal_sec.pgp
 recipient=ameetchaubal@gmail.com
+# For PGP
+decrypt_w_signing=false
