--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,3 +6,13 @@ log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
 log4j.appender.fileAppender.File=log/sparkEncrypter.log
+
+# Package
+log4j.logger.com.ameet=DEBUG
+
+log4j.logger.org.spark-project.jetty=WARN
+log4j.logger.org.spark-project.jetty.util.component.AbstractLifeCycle=ERROR
+log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=INFO
+log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=INFO
+log4j.logger.org.apache.parquet=ERROR
+log4j.logger.parquet=ERROR
